k8s/prod/0.1/canary/flask-admin-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: flask-admin-dr
  namespace: ms-prod
spec:
  host: flask-admin
  subsets:
  - name: prod
    labels:
      version: "0.1"
  - name: canary
    labels:
      version: "0.1"
