k8s/prod/0.1/canary/flask-admin-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-admin-vs
  namespace: ms-prod
spec:
  hosts:
  - flask-admin
  http:
  - route:
    - destination:
        host: flask-admin
        subset: prod
      weight: $prod_weight
    - destination:
        host: flask-admin
        subset: canary
      weight: $canary_weight
